# ReChimera-reasitance-level-editor-assets-exporter

./: .gitignore  Cargo.toml  NOTICE.md  README.md  RELEASE_NOTES.md
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/.tauri/: rechimera.key.pub
apps/desktop/src/: AboutModal.tsx  App.js  App.tsx  AssetPreview.tsx  BottomPanel.js  BottomPanel.tsx  CacheLibraryModal.tsx  CharacterPreviewModal.tsx  DocsModal.tsx  ExportOptionsModal.tsx  ExportProgress.js  ExportProgress.tsx  FpsOverlay.js  FpsOverlay.tsx  GlbPreview.tsx  GltfCharacterModal.tsx  Hierarchy.js  Hierarchy.tsx  Inspector.js  Inspector.tsx  LoadProgress.js  LoadProgress.tsx  MenuBar.js  MenuBar.tsx  Modal.js  Modal.tsx  OpenLevelModal.js  OpenLevelModal.tsx  PsarcModal.tsx  PsarcTools.js  PsarcTools.tsx  RawCharacterModal.tsx  SettingsModal.tsx  SoundPlayer.tsx  Splash.tsx  StatusBar.js  StatusBar.tsx  TabContainer.tsx  TitleBar.js  TitleBar.tsx  (+25 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: cache.rs  main.rs
apps/desktop/src/components/: AboutModal.tsx  CacheLibraryModal.tsx  CharacterPreviewModal.tsx  DocsModal.tsx  ExportOptionsModal.tsx  ExportProgress.tsx  GltfCharacterModal.tsx  LoadProgress.tsx  Modal.tsx  OpenLevelModal.tsx  PsarcModal.tsx  Select.tsx  SettingsModal.tsx  SoundPlayer.tsx  UpdateChecker.tsx
apps/desktop/src/i18n/: index.ts
apps/desktop/src/i18n/locales/: en.json  es.json  fr.json  ru.json  zh.json
apps/desktop/src/ui/: Button.tsx  Checkbox.tsx  IconButton.tsx  NumberInput.tsx  TextInput.tsx  Toggle.tsx  index.ts
apps/desktop/src/views/: AssetPreview.tsx  BottomPanel.tsx  GlbPreview.tsx  Hierarchy.tsx  Inspector.tsx  MenuBar.tsx  PsarcTools.tsx  Splash.tsx  StatusBar.tsx  TabContainer.tsx  TitleBar.tsx  Toolbar.tsx  Viewport.tsx
crates/lunalib/: Cargo.toml
crates/lunalib/examples/: dump_animsets.rs  dump_assetlookup.rs  dump_gameplay.rs  dump_moby_meshes.rs  dump_moby_skin.rs  dump_shaders.rs  dump_textures.rs  dump_tie_meshes.rs  dump_ufrags.rs  dump_zones.rs
crates/lunalib/src/: animation.rs  assetlookup.rs  dds.rs  detail_rfom.rs  envsampler_rfom.rs  error.rs  foliage_rfom.rs  gameplay.rs  gameplay_old.rs  gameplay_rfom.rs  gltf_export.rs  igfile.rs  level_glb.rs  level_layout.rs  lib.rs  lighting_rfom.rs  math.rs  moby.rs  moby_old.rs  moby_rfom.rs  region_rfom.rs  rfom_probe.rs  shader.rs  shader_old.rs  shader_rfom.rs  shrub_rfom.rs  skeleton.rs  skybox_rfom.rs  sound.rs  stream.rs  texture.rs  texture_old.rs  texture_rfom.rs  tie.rs  tie_inst_rfom.rs  tie_old.rs  tie_rfom.rs  zone.rs  zone_old.rs
crates/lunalib/tests/: synthetic_assetlookup.rs
crates/psarc/: Cargo.toml
crates/psarc/src/: error.rs  lib.rs  reader.rs
docs/: README.md
docs/internal/app/: 01-Map-Extraction.md  01-architecture.md  02-cache.md  03-frontend.md  04-updater.md  05-export-pipeline.md
docs/internal/lunalib-and-IT/: 01-ighw-container.md  02-asset-lookup.md  03-skeleton.md  04-moby-tie-geometry.md  05-textures.md  06-animation.md  07-sound.md  08-gltf-export.md  09-debugging-methodology.md  10-vegetation-and-sky.md
docs/logs/: error on gltf
docs/public/: README.md
scripts/: bump-version.mjs  strip-comments.mjs  sync-version.mjs
