[package]
name = "psarc"
description = "PlayStation Archive (PSARC) reader — Rust port of github.com/ShadelessFox/psarc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
byteorder.workspace = true
thiserror.workspace = true
flate2.workspace = true
md-5.workspace = true
