[package]
name = "rechimera-desktop"
description = "ReChimera Tauri desktop app — load Resistance 2/3 levels via assetlookup.dat"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rechimera-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lunalib = { path = "../../../crates/lunalib" }
psarc = { path = "../../../crates/psarc" }
