[package]
name = "rechimera-desktop"
description = "ReChimera Tauri desktop app — load Resistance 2/3 levels via assetlookup.dat"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rechimera-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
# Auto-updater: checks for newer releases at the endpoint configured
# in tauri.conf.json, downloads + verifies the signed bundle, swaps
# the binary, then asks the process plugin to relaunch. Pubkey check
# is enforced — releases without a matching signature are rejected
# before install.
tauri-plugin-updater = "2"
# Lets the updater request a clean app relaunch after the install
# step. Without this the user has to close/reopen manually.
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
lunalib = { path = "../../../crates/lunalib" }
psarc = { path = "../../../crates/psarc" }
