[package]
name = "rechimera-desktop"
description = "ReChimera Tauri desktop app — load Resistance 2/3 levels via assetlookup.dat"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rechimera-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
# Auto-updater: checks for newer releases at the endpoint configured
# in tauri.conf.json, downloads + verifies the signed bundle, swaps
# the binary, then asks the process plugin to relaunch. Pubkey check
# is enforced — releases without a matching signature are rejected
# before install.
tauri-plugin-updater = "2"
# Lets the updater request a clean app relaunch after the install
# step. Without this the user has to close/reopen manually.
tauri-plugin-process = "2"
# Opens external URLs / files in the user's default browser /
# OS handler. Without this, `window.open()` and `<a target="_blank">`
# misfire inside the WebView2 / WKWebView (open in-place, do nothing,
# or open a stub child window). The plugin's `open()` shells out to
# the OS so links land in Chrome / Safari / whatever the user has
# set as default.
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
# Dev-knob loader. Reads `.env` from the working dir (or any ancestor)
# at app startup so feature toggles like `RECHIMERA_SKEL` can live in
# a file instead of needing per-invocation `set`/`$env:` shell incantations.
# Production builds harmlessly skip the lookup if no `.env` exists.
dotenvy = "0.15"
lunalib = { path = "../../../crates/lunalib" }
psarc = { path = "../../../crates/psarc" }
